<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context=".ui.coinflip.CoinFlipAdapter">

    <ImageView
        android:id="@+id/ImageView_item_coin_flip_result"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/CONTENT_DESCRIPTION"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout_item_coin_flip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ImageView_item_coin_flip_result"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TextView_item_coin_flip_child_choice"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:maxLines="5"
            android:scrollHorizontally="false"
            android:text="@string/empty_state_coin_flip_no_coin_flips"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/TextView_item_coin_flip_date"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/DEFAULT_TEXT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView_item_coin_flip_child_choice" />

        <TextView
            android:id="@+id/TextView_item_coin_flip_result"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:text="@string/DEFAULT_TEXT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextView_item_coin_flip_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ImageView_item_coin_flip_portrait"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/CONTENT_DESCRIPTION"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>